--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -30,7 +30,7 @@ html(lang='en')
             .container
                 a.navbar-brand.js-scroll-trigger(href='#page-top') Start Bootstrap
                 button.navbar-toggler.navbar-toggler-right.text-uppercase.font-weight-bold.bg-primary.text-white.rounded(type='button', data-toggle='collapse', data-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
-                    | Menu 
+                    | Menu
                     i.fas.fa-bars
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ml-auto
@@ -45,7 +45,7 @@ html(lang='en')
         header.masthead.bg-primary.text-white.text-center
             .container.d-flex.align-items-center.flex-column
                 // Masthead Avatar Image
-                img.masthead-avatar.mb-5(src='assets/img/avataaars.svg', alt='')
+                img.masthead-avatar.mb-5(src='assets/img/matt-puleri.jpeg', alt='')
                 // Masthead Heading
                 h1.masthead-heading.text-uppercase.mb-0 Start Bootstrap
                 // Icon Divider
@@ -205,7 +205,7 @@ html(lang='en')
                     .col-lg-4
                         h4.text-uppercase.mb-4 About Freelancer
                         p.lead.mb-0
-                            | Freelance is a free to use, MIT licensed Bootstrap theme created by 
+                            | Freelance is a free to use, MIT licensed Bootstrap theme created by
                             a(href='http://startbootstrap.com') Start Bootstrap
                             | .
         // Copyright Section
