--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 
 // Set custom colors
-$teal: #1abc9c;
+$teal: #fc9797;
 $dark-blue: #2c3e50;
 
 // Override Bootstrap primary and secondary colors
