--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,7 +2,7 @@
 #mainNav {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    font-family: 'Bungee Hairline', cursive;
+    font-family: 'Open Sans', sans-serif;
     font-weight: $headings-font-weight;
     .navbar-brand {
         color: $white;
