--- a/src/scss/_masthead.scss
+++ b/src/scss/_masthead.scss
@@ -1,7 +1,8 @@
 .masthead {
-    padding-top: calc(6rem + 74px);
+    padding-top: calc(6rem + 2px);
     padding-bottom: 6rem;
     .masthead-heading {
+        margin-bottom: 20px;
         font-size: 2.75rem;
         line-height: 2.75rem;
     }
@@ -25,4 +26,9 @@
             font-size: 1.5rem;
         }
     }
+}
+
+.emphasis-subheading {
+    color: #17a2b8;
+    font-weight: bold;
 }
